push slider animation

--- a/slider.html
+++ b/slider.html
@@ -56,12 +56,9 @@
   <header class="w-full">
     <nav class="h-16 flex justify-between items-center mx-4 lg:mx-8">
       <!-- Back Navigation -->
-      <div>
+      <div class="flex w-fit gap-8">
         <a href="./details-collection.html"><i class="fa-solid fa-arrow-left text-2xl cursor-pointer"></i></a>
-      </div>
-      <!-- select -->
-      <div class="p-1 w-full md:w-1/4">
-        <div class="select_wrap h-full relative border">
+        <div class="select_wrap w-72 h-full relative border">
           <ul class="default_option bg-hijau-keraton relative cursor-pointer text-white">
             <li class="p-2">
               <div class="option">
@@ -89,13 +86,17 @@
           </ul>
         </div>
       </div>
+      <!-- select -->
+      <!-- <div class="p-1 w-full md:w-1/4">
+        
+      </div> -->
       <!-- Logo -->
       <div>
         <img src="/assets/img/logo-keraton.png" alt="logo-keraton" class="w-12 h-12">
       </div>
     </nav>
   </header>
-  <main class="w-full h-[85vh]">
+  <main class="w-full h-[85vh] mt-4">
     <section class="swiper-container h-[90%] w-full">
       <div class="swiper h-full w-full">
         <div class="swiper-wrapper h-full">
@@ -105,7 +106,7 @@
             <div class="tulisan w-[15%] h-full flex justify-end items-start">
               <h1 class="text-6xl text-hijau-keraton font-bold rotate-180 uppercase">Gamelan</h1>
             </div>
-            <div class="relative w-[85%] h-full">
+            <div class="relative gambar h-full">
               <img src="/assets/img/gamelan-1.jpg" alt="" class="w-full h-full object-cover">
               <div class="absolute bottom-0 left-0 p-4 w-full text-center">
                 <button class="w-3/5 bg-hijau-keraton text-white p-2 rounded-lg tracking-widest text-lg">DETAIL KOLEKSI</button>
@@ -116,7 +117,7 @@
             <div class="tulisan w-[15%] h-full flex justify-end items-start">
               <h1 class="text-6xl text-hijau-keraton font-bold rotate-180 uppercase">Gamelan</h1>
             </div>
-            <div class="relative w-[85%] h-full">
+            <div class="relative gambar h-full">
               <img src="/assets/img/gamelan-1.jpg" alt="" class="w-full h-full object-cover">
               <div class="absolute bottom-0 left-0 p-4 w-full text-center">
                 <button class="w-3/5 bg-hijau-keraton text-white p-2 rounded-lg tracking-widest text-lg">DETAIL KOLEKSI</button>
@@ -127,7 +128,7 @@
             <div class="tulisan w-[15%] h-full flex justify-end items-start">
               <h1 class="text-6xl text-hijau-keraton font-bold rotate-180 uppercase">Gamelan</h1>
             </div>
-            <div class="relative w-[85%] h-full">
+            <div class="relative gambar h-full">
               <img src="/assets/img/gamelan-1.jpg" alt="" class="w-full h-full object-cover">
               <div class="absolute bottom-0 left-0 p-4 w-full text-center">
                 <button class="w-3/5 bg-hijau-keraton text-white p-2 rounded-lg tracking-widest text-lg">DETAIL KOLEKSI</button>
